# JanDrishti

./: .gitignore
JanDrishti-Pollution-Action-DashBoard/: ACTIVATION_GUIDE.md  BOTH_NOTIFICATIONS_GUIDE.md  LOCAL_DEVELOPMENT.md  WHATSAPP_SETUP.md
JanDrishti-Pollution-Action-DashBoard/backend/: .env  .vercelignore  AUTO_SANDBOX_SETUP.md  DUAL_NOTIFICATION_SETUP.md  FIX_PHONE_STORAGE.md  PRODUCTION_WHATSAPP_SETUP.md  QUICK_EMAIL_SETUP.md  STEP_BY_STEP_SETUP.md  TWILIO_SANDBOX_GUIDE.md  app.py  aqi_collector.py  auto_sandbox_helper.py  clear_wards_cache.py  email_scheduler.py  email_service.py  email_subscriptions_schema.sql  fix_profiles_phone.sql  main.py  pyproject.toml  requirements.txt  selected_wards.json  test_twilio.py  test_wards_endpoint.py  twilio_service.py  whatsapp_scheduler.py  whatsapp_subscriptions_schema.sql
JanDrishti-Pollution-Action-DashBoard/backend/middleware/: cache.py
JanDrishti-Pollution-Action-DashBoard/frontend/app/: globals.css  page.tsx
JanDrishti-Pollution-Action-DashBoard/frontend/components/: ai-forecast.tsx  alerts-panel.tsx  aqi-reference.tsx  auth-dialog.tsx  chatbot-assistant.tsx  citizen-reporting.tsx  delhiaqimap.tsx  email-subscription-modal.tsx  header.tsx  historical-analysis.tsx  main-metrics.tsx  mode-toggle.tsx  news-section.tsx  policy-recommendations.tsx  pollutant-filters.tsx  pollutant-health.tsx  pollution-chart.tsx  stats-grid.tsx  weather-card.tsx  whatsapp-subscription-modal.tsx
JanDrishti-Pollution-Action-DashBoard/frontend/lib/: api.ts  backend-url.ts
(+6 files in other folders)
